# protein_pair_extraction

./: CMakeLists.txt  README.md
src/: XMLparse.cpp  aho_corasick.hpp  filter.cpp  filter.h  main.cpp  protein_pair_extraction.cpp  remove_noise.cpp  test.cpp  trie_builder.cpp  trie_builder.h  utils.cpp  utils.h
